<resources>
    <string name="app_name">Score Keeper</string>
<string name="imageDescription">Basketball Logo</string>

    <string name="editTextHint">Enter Team Name!</string>
    <string name="teamName">Team Name</string>
    <string name="btnStart">Start Game</string>
    <string name="gameOverText">Teams Final Score</string>
    <string name="btnNew">New Game</string>
    <string name="teamScore">0</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="q4">Q4</string>
    <string name="shooting_percentage">Shooting Percentage</string>
    <string name="percentPlaceholder">0%</string>
    <string name="btn1">Free Throw</string>
    <string name="btn2">2 Point</string>
    <string name="btn3">3 Point</string>
    <string name="btn4">Missed Shot</string>
    <string name="end_game">End Game</string>
</resources>