<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/court"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewTeam1Name"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/teamName"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/team1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam2Name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTeam2Name"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/teamName"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/team2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam1Name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTeam1score"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/team1"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam2score"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTeam1Name"
            app:layout_constraintVertical_bias="0.04000002" />

        <TextView
            android:id="@+id/textViewTeam2score"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_black"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textColor="@color/team2"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTeam1score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam1score"
            app:layout_constraintTop_toTopOf="@+id/textViewTeam1score"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTeam1score"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/radioButtonQ1"
                style="@style/teamStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/q1"
                android:textAppearance="@style/teamStyle"
                android:textColor="@color/orange" />

            <RadioButton
                android:id="@+id/radioButtonQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/orbitron_black"
                android:text="@string/q2"
                android:textAlignment="center"
                android:textAppearance="@style/teamStyle"
                android:textColor="@color/orange"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/orbitron_black"
                android:text="@string/q3"
                android:textAlignment="center"
                android:textAppearance="@style/teamStyle"
                android:textColor="@color/orange"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/orbitron_black"
                android:text="@string/q4"
                android:textAlignment="center"
                android:textAppearance="@style/teamStyle"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewTeam1q1score"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTeam1q2score"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam1q2score"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTeam1q2score" />

        <TextView
            android:id="@+id/textViewTeam1q2score"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team1"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTeam1q3score"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam1q3score"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam1q1score"
            app:layout_constraintTop_toTopOf="@+id/textViewTeam1q3score" />

        <TextView
            android:id="@+id/textViewTeam1q3score"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team1"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTeam1q4score"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam1q4score"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam1q2score"
            app:layout_constraintTop_toTopOf="@+id/textViewTeam1q4score" />

        <TextView
            android:id="@+id/textViewTeam1q4score"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam1q3score"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.04000002" />

        <TextView
            android:id="@+id/textViewTeam2q1score"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam2q2score"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTeam1q2score"
            app:layout_constraintVertical_bias="0.04000002" />

        <TextView
            android:id="@+id/textViewTeam2q2score"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team2"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTeam2q1score"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam2q3score"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam2q1score"
            app:layout_constraintTop_toTopOf="@+id/textViewTeam2q1score" />

        <TextView
            android:id="@+id/textViewTeam2q3score"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team2"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTeam2q2score"
            app:layout_constraintEnd_toStartOf="@+id/textViewTeam2q4score"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam2q2score"
            app:layout_constraintTop_toTopOf="@+id/textViewTeam2q2score" />

        <TextView
            android:id="@+id/textViewTeam2q4score"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/teamScore"
            android:textAlignment="center"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team2"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTeam2q3score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewTeam2q3score"
            app:layout_constraintTop_toTopOf="@+id/textViewTeam2q3score" />

        <TextView
            android:id="@+id/textViewShootingPercentHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shooting_percentage"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTeam2q3score"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/textViewTeam1Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentPlaceholder"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team1"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam1Ft"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam1Ft"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam1Ft"
            app:layout_constraintTop_toBottomOf="@+id/textViewShootingPercentHeader"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewTeam2Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentPlaceholder"
            android:textAppearance="@style/teamStyle"
            android:textColor="@color/team2"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam2Ft"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam2Ft"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam2Ft"
            app:layout_constraintTop_toBottomOf="@+id/textViewShootingPercentHeader" />

        <Button
            android:id="@+id/buttonTeam1Ft"
            style="@style/btnStyleTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam12Pt"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam12Pt"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam12Pt"
            app:layout_constraintTop_toBottomOf="@+id/textViewTeam1Percent" />

        <Button
            android:id="@+id/buttonTeam12Pt"
            style="@style/btnStyleTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam13Pt"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam13Pt"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam13Pt"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeam1Ft" />

        <Button
            android:id="@+id/buttonTeam13Pt"
            style="@style/btnStyleTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam1Ms"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam1Ms"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam1Ms"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeam12Pt" />

        <Button
            android:id="@+id/buttonTeam1Ms"
            style="@style/btnStyleTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeam13Pt" />

        <Button
            android:id="@+id/buttonTeam2Ft"
            style="@style/btnStyleTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam22Pt"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam22Pt"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam22Pt"
            app:layout_constraintTop_toBottomOf="@+id/textViewTeam2Percent" />

        <Button
            android:id="@+id/buttonTeam22Pt"
            style="@style/btnStyleTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam23Pt"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam23Pt"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam23Pt"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeam2Ft" />

        <Button
            android:id="@+id/buttonTeam23Pt"
            style="@style/btnStyleTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTeam2Ms"
            app:layout_constraintEnd_toEndOf="@+id/buttonTeam2Ms"
            app:layout_constraintStart_toStartOf="@+id/buttonTeam2Ms"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeam22Pt" />

        <Button
            android:id="@+id/buttonTeam2Ms"
            style="@style/btnStyleTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeam23Pt" />

        <Button
            android:id="@+id/buttonEndGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/end_game"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeam1Ms" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>